--- a/_config.yml
+++ b/_config.yml
@@ -15,6 +15,7 @@ baseurl: "" # the subpath of your site, e.g. /blog
 url: "http://www.dagarath.com" # the base hostname & protocol for your site
 twitter_username: Dagarath
 github_username:  Dagarath
+paginate: 5
 
 # Build settings
 markdown: kramdown
